--- a/Index.html
+++ b/Index.html
@@ -502,9 +502,9 @@
         <div class="Season-Section">
             <div class="row1">
                 <!--January Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/january.jpg">
+                <button class="myBtn-season"><img src="Images/january.png">
                     <h2>January</h2>
-                    <p>Dry season farming can help improve the quality of the land being used.</p>
+                    <p>New Year's Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal9" class="modal-season">
@@ -525,9 +525,9 @@
                 </div> 
 
                 <!--February Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/february.jpeg">
+                <button class="myBtn-season"><img src="Images/february.png">
                     <h2>February</h2>
-                    <p>Additionally, the irrigation of the farms helps to improve the water condition of the soil.</p>
+                    <p>Valentine's Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal10" class="modal-season">
@@ -548,9 +548,9 @@
                 </div>
 
                  <!--March Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/march.jpg">
+                 <button class="myBtn-season"><img src="Images/march.png">
                     <h2>March</h2>
-                    <p>It also helps to dissolve the nutrients in the soil and makes them available to the plant.</p>
+                    <p>Panagbenga</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal11" class="modal-season">
@@ -571,9 +571,9 @@
                 </div>
 
                  <!--April Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/april.jpg">
+                 <button class="myBtn-season"><img src="Images/april.png">
                     <h2>April</h2>
-                    <p>The process helps to regulate the temperature of the soil.</p>
+                    <p>Good Friday</p>
                 </button>    
                 <!-- The Modal -->
                 <div id="myModal12" class="modal-season">
@@ -594,9 +594,9 @@
                 </div>
 
                 <!--May Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/may.jpg">
+                <button class="myBtn-season"><img src="Images/may.png">
                     <h2>May</h2>
-                    <p>Dry season has lower chance of rainfall and low humidity.</p>
+                    <p>Labour Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal13" class="modal-season">
@@ -617,9 +617,9 @@
                 </div>
 
                 <!--June Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/rainy-season.png">
+                <button class="myBtn-season"><img src="Images/june.png">
                     <h2>June</h2>
-                    <p>A good balance of rain and proper irrigation can lead to faster-growing plants</p>
+                    <p>Independence Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal14" class="modal-season">
@@ -642,9 +642,9 @@
 
             <div class="row2">
                 <!--July Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/rainy-season.png">
+                <button class="myBtn-season"><img src="Images/july.png">
                     <h2>July</h2>
-                    <p>Which can cut down on germination time and the length between seeding and harvest. </p>
+                    <p>Eid al-Adha</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal15" class="modal-season">
@@ -665,9 +665,9 @@
                 </div>
 
                 <!--August Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/rainy-season.png">
+                <button class="myBtn-season"><img src="Images/august.png">
                     <h2>August</h2>
-                    <p>The crops are dependent on water during their entire lifecycle in order to survive and thrive</p>
+                    <p>National Heroes' Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal16" class="modal-season">
@@ -688,9 +688,9 @@
                 </div>
 
                  <!--September Trigger/Open The Modal -->
-                 <button class="myBtn-season"><img src="Images/rainy-season.png">
+                 <button class="myBtn-season"><img src="Images/september.png">
                     <h2>September</h2>
-                    <p>Farmers can use the rainy days to work important paperwork to ensure their crops are protected for the year. </p>
+                    <p>Feast of the Nativity of the Blessed Virgin Mary</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal17" class="modal-season">
@@ -711,9 +711,9 @@
                 </div>
 
                 <!--October Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/rainy-season.png">
+                <button class="myBtn-season"><img src="Images/october.png">
                     <h2>October</h2>
-                    <p>Rainy days allow for farmers to utilize their farm management software</p>
+                    <p>National Teacher's Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal18" class="modal-season">
@@ -734,9 +734,9 @@
                 </div>
 
                 <!--November Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/rainy-season.png">
+                <button class="myBtn-season"><img src="Images/november.png">
                     <h2>November</h2>
-                    <p>Agriculture is our wisest pursuit, because it will in the end contribute most to real wealth, good morals & happiness.</p>
+                    <p>All Saints' Day and All Souls' Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal19" class="modal-season">
@@ -757,9 +757,9 @@
                 </div>
 
                 <!--December Trigger/Open The Modal -->
-                <button class="myBtn-season"><img src="Images/dry-season.png">
+                <button class="myBtn-season"><img src="Images/december.png">
                     <h2>December</h2>
-                    <p>Farmers Provide Access to Food. Many Americans enjoy an abundant food supply</p>
+                    <p>Christmas Day</p>
                 </button>
                 <!-- The Modal -->
                 <div id="myModal20" class="modal-season">
