--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 	<link href="CSS/css.css" rel="stylesheet">
+    <!--Mapbox-->
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+    <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css" type="text/css">
     <!--Weather Javascript-->
     <script src="JS/script.js" defer></script>
     <!--Donut Chart-->
@@ -45,6 +50,8 @@
         </script>
 <style>
 </style>
+    <!--Map box-->
+    <script src="JS/location.js" defer></script>
     <!--Admin Login-->
     <script src="JS/adminlogin.js" defer></script>
 </head>
@@ -1308,6 +1315,7 @@
             <h1>Geographic Information System</h1>
         </div>
         <div class="GIS">
+            <div id='map'></div>   
         </div>
 
 
