--- a/Index.html
+++ b/Index.html
@@ -73,6 +73,7 @@
 
     <div class="Banner" id="HomeID">
         <div class="Banner1">
+            <img src="images/SampleLogo.png">
             <h2>Project ANI</h2>
             <o>Agri Natin Ito : A Decision Support System for Benguet's Crop Prediction</o>
         </div>
@@ -168,7 +169,7 @@
                                     <p>Chinese cabbage (Brassica rapa, var. pekinensis), also called pechay Baguio in the Philippines, a form of Chinese cabbage is cultivated for its edible leaves. Napa cabbage is widely grown in eastern Asia and is commonly used to make kimchi, a traditional Korean dish made of spicy fermented vegetables.</p>
                                     <br>
                                     <h1>💡 Tips</h1>
-                                    <p>Chinese cabbage or wombokis grown through direct seeding. In direct seeding, plant 2 to 3 seeds per hill. When these have germinated, thin out the poor growers but leave one robust plant per hill. Space plants 45 cm to 60 cm apart as this variety is a large heading type. Keep the soil moist and transplant with care. If possible, start seedlings in a protected place and transplant on a cloudy day or in late-afternoon. Apply a starter fertilizer solution like Peters Blossom Starter when planting.
+                                    <p>Chinese cabbage or wombokis grown through direct  seeding. In direct seeding, plant 2 to 3 seeds per hill. When these have germinated, thin out the poor growers but leave one robust plant per hill. Space plants 45 cm to 60 cm apart as this variety is a large heading type. Keep the soil moist and transplant with care. If possible, start seedlings in a protected place and transplant on a cloudy day or in late-afternoon. Apply a starter fertilizer solution like Peters Blossom Starter when planting.
                                     </p>
                                 </div>
                                 <div class="modal-picture">
@@ -414,11 +415,11 @@
                         </div>
                         <div class="modal-body">
                             <div class="modal-information">
-                                <h1>ⓘ What is Carrots?</h1>
-                                <p>The carrot is a root vegetable, most commonly observed as orange in color, though purple, black, red, white, and yellow cultivars exist, all of which are domesticated forms of the wild carrot, Daucus carota, native to Europe and Southwestern Asia.</p>
+                                <h1>ⓘ What is Sayote?</h1>
+                                <p>Sayote is a Light green and pear-shaped with a thick skin and a hard core, chayote, or sayote as it is called in the Philippines, grows on vines. It is known as as vegetable pear or mirliton in some parts of the world. We even prefer using chayote over the traditional raw papaya when cooking tinola.</p>
                                 <br>
                                 <h1>💡 Tips</h1>
-                                <p>Plant your carrots in rows that are 1 to 2 feet apart. Seeds should be planted about a ½ inch deep and 1 to 2 inches apart. When growing carrots in the garden, you’ll wait for your carrot plants to appear. When the plants are 4 inches high, thin the plants to 2 inches  apart. You may find that some of the carrots are actually large enough to eat. When growing carrots in the garden, make sure to plant, per person, 5 to 10 feet of row to have enough carrots for table use. You will get about 1 pound 0.5 kg. of carrots in a 1 foot row. You want to keep your carrots free of weeds. This is especially important when they are small. The weeds will take nutrients away from the carrots and will cause poor carrot development.
+                                <p>Caring for the Growing Vine. Water the chayote vine about three times a week, and more regularly in hot, dry conditions. Be sure to have placed the plant in a place where it is able to clamber onto a trellis; chayote vines are rampant climbers and will cover trellises in just about no time at all.
                                 </p>
                             </div>
                             <div class="modal-picture">
@@ -476,6 +477,10 @@
                 btn[8].onclick = function() {
                     modal[8].style.display = "block";
                 }
+
+                btn[9].onclick = function() {
+                    modal[9].style.display = "block";
+                }
                 // When the user clicks on <span> (x), close the modal
                 span[0].onclick = function() {
                     modal[0].style.display = "none";
@@ -511,6 +516,10 @@
 
                 span[8].onclick = function() {
                     modal[8].style.display = "none";
+                }
+
+                span[9].onclick = function() {
+                    modal[9].style.display = "none";
                 }
                 // When the user clicks anywhere outside of the modal, close it
                 window.onclick = function(event) {
