--- a/Index.html
+++ b/Index.html
@@ -541,6 +541,15 @@
             <h1>Season</h1>
             <p>Project ANI aims to help reduce crop waste and loss through crop yield prediction, and help promote sustainable agriculture and economic growth. These section contains information about trending crops in each month. </p>
         </div>
+
+
+        <div class="Season-Options">
+            <button class="all-season"><h2>All Seasons</h2></button>
+            <button class="dry-season"><h2>Dry Seasons</h2></button>
+            <button class="wet-season"><h2>Wet Seasons</h2></button>
+        </div>
+
+
         <div class="Season-Section">
             <div class="row1">
                 <!--January Trigger/Open The Modal -->
