--- a/admin-dataset.html
+++ b/admin-dataset.html
@@ -22,7 +22,7 @@
         </a>
         <div class="navbar-links">
            <ul>
-               <li><a href="#" class="MMlist">Edit</a></li>
+               <li><a href="edit.html" class="MMlist">Edit</a></li>
                <li><a href="#" class="MMlist">Dataset</a></li>
                <li><a href="#" class="MMlist">Forum</a></li>
            </ul>
