--- a/Index.html
+++ b/Index.html
@@ -1432,20 +1432,6 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyA0Z7v4Ra16VFCFV1P-tKXKoO85qIl5VaM",
-    authDomain: "project-ani-e4c86.firebaseapp.com",
-    projectId: "project-ani-e4c86",
-    storageBucket: "project-ani-e4c86.appspot.com",
-    messagingSenderId: "1027527105712",
-    appId: "1:1027527105712:web:c65eb6a5d15de1c5d4ef75",
-    measurementId: "G-8CBN1FNC7F"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
+<script src ="JS/firebase.js">
 </script>
 </html>
