--- a/edit.html
+++ b/edit.html
@@ -42,24 +42,30 @@
     <div class="edit">
         <div class="edit-crops">
             <form>
-                <input type="input" id="cropName" placeholder="Crop Name"/>
-                <input type="input" id="cropBenefit" placeholder="Crop Benefit"/>
-                <input type="input" id="cropInformation" placeholder="Crop Information"/>
-                <input type="input" id="cropTips" placeholder="Crop Tips"/>
+                <h1>Crops (Create)</h1>
+                <input type="input" id="cropName" placeholder="Enter Crop Name"/>
+                <input type="input" id="cropBenefit" placeholder="Enter Crop Benefit"/>
+                <input type="input" id="cropInformation" placeholder="Enter Crop Information"/>
+                <input type="input" id="cropTips" placeholder="Enter Crop Tips"/>
+                <button type="button" onclick="createCrop()">Create</button>
             </form>
         </div>
         <div class="edit-season">
             <form>
-                <input type="input" id="seasonName" placeholder="Season Name"/>
-                <input type="input" id="seasonDescription" placeholder="Season Description"/>
-                <input type="input" id="seasonInformation" placeholder="Season information"/>
+                <h1> Season (Create)</h1>
+                <input type="input" id="seasonName" placeholder="Enter Season Name"/>
+                <input type="input" id="seasonDescription" placeholder="Enter Season Description"/>
+                <input type="input" id="seasonInformation" placeholder="Enter Season information"/>
+                <button type="button" onclick="createSeason()">Create</button>
             </form>
         </div>
         <div class="edit-municipality">
             <form>
-                <input type="input" id="municipalityName" placeholder="Muncipality Name"/>
-                <input type="input" id="municipalityDescription" placeholder="Muncipality Description"/>
-                <input type="input" id="municipalityInformation" placeholder="Muncipality Information"/>
+                <h1>Municipality (Create)</h1>
+                <input type="input" id="municipalityName" placeholder="Enter Muncipality Name"/>
+                <input type="input" id="municipalityDescription" placeholder="Enter Muncipality Description"/>
+                <input type="input" id="municipalityInformation" placeholder="Enter Muncipality Information"/>
+                <button type="button" onclick="createMunicipality()">Create</button>
             </form>
         </div>
     </div>
