--- a/edit.html
+++ b/edit.html
@@ -75,14 +75,46 @@
         <p>Made by the CITCS team</p>
     </div> 
     
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+    <script>
 
-    <script src ="JS/firebase.js">
+        const firebaseConfig = {
+            apiKey: "AIzaSyA0Z7v4Ra16VFCFV1P-tKXKoO85qIl5VaM",
+            authDomain: "project-ani-e4c86.firebaseapp.com",
+            projectId: "project-ani-e4c86",
+            storageBucket: "project-ani-e4c86.appspot.com",
+            messagingSenderId: "1027527105712",
+            appId: "1:1027527105712:web:c65eb6a5d15de1c5d4ef75",
+            measurementId: "G-8CBN1FNC7F"
+        };
+
+        const app = firebase.initializeApp(firebaseConfig);
+        const firestore = firebase.firestore();
+        
+        function createCrop(){
+            console.log('Creating Record from firestore')
+            var cropName = document.getElementById('cropName').value
+            var cropBenefit = document.getElementById('cropBenefit').value
+            var cropInformation = document.getElementById('cropInformation').value
+            var cropTips = document.getElementById('cropTips').value
+            firestore.collection('crops').add({
+                name: cropName,
+                benefit: cropBenefit,
+                information: cropInformation,
+                tips: cropTips,
+                timestamp: new Date()
+            })
+            .then((docRef) => {
+                console.log('Record Successfuly Created ' + docRef.id)
+            })
+            .catch((error)=> {
+                document.getElementById('errorMsgCreate').innerHTML = "Error: " + error.message
+                console.log(error)
+            })
+        }
+
     </script>
 </body>
 </html>
