--- a/edit.html
+++ b/edit.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="filler-edit">
-        <h1>Prediction / Datasets</h1>
+        <h1>Edit</h1>
     </div>
     <div class="edit">
         <div class="edit-crops">
